fix: namespace sample greeting API route
